--- a/Russet.iMuneem.csproj
+++ b/Russet.iMuneem.csproj
@@ -53,51 +53,23 @@
     <Compile Include="Categories\Category.cs" />
     <Compile Include="Categories\Group.cs" />
     <Compile Include="Categories\CategoryType.cs" />
-    <Compile Include="Communications\Address.cs" />
-    <Compile Include="Communications\AddressType.cs" />
     <Compile Include="Communications\City.cs" />
-    <Compile Include="Communications\Contact.cs" />
-    <Compile Include="Communications\ContactType.cs" />
     <Compile Include="Communications\Country.cs" />
     <Compile Include="Communications\State.cs" />
     <Compile Include="Communications\ZipCode.cs" />
     <Compile Include="Finance\Currency.cs" />
-    <Compile Include="Finance\FinancialBook.cs" />
     <Compile Include="Finance\FinancialYear.cs" />
+    <Compile Include="Inventories\Product.cs" />
+    <Compile Include="Inventories\ProductBatch.cs" />
+    <Compile Include="Inventories\ProductCategory.cs" />
+    <Compile Include="Inventories\ProductManufacturer.cs" />
+    <Compile Include="Inventories\ProductUoM.cs" />
+    <Compile Include="Inventories\ProductVersion.cs" />
     <Compile Include="Ledgers\Account.cs" />
-    <Compile Include="Ledgers\InventoryAccount.cs" />
-    <Compile Include="Ledgers\InventoryHistory.cs" />
-    <Compile Include="Ledgers\TransactionHistory.cs" />
     <Compile Include="Organization\Company.cs" />
-    <Compile Include="Peoples\Persons.cs" />
-    <Compile Include="Products\Product.cs" />
-    <Compile Include="Products\ProductBatch.cs" />
-    <Compile Include="Products\ProductCategory.cs" />
-    <Compile Include="Products\ProductCost.cs" />
-    <Compile Include="Products\ProductMaterial.cs" />
-    <Compile Include="Products\ProductMeasurement.cs" />
-    <Compile Include="Products\ProductMovHistory.cs" />
-    <Compile Include="Products\ProductOrderHistory.cs" />
-    <Compile Include="Products\ProductPicture.cs" />
-    <Compile Include="Products\ProductPrice.cs" />
-    <Compile Include="Products\ProductSKU.cs" />
-    <Compile Include="Products\ProductType.cs" />
-    <Compile Include="Products\ProductUnitOfMeasurement.cs" />
-    <Compile Include="Products\ProductVendor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Service.cs" />
-    <Compile Include="Services\ServiceCategory.cs" />
-    <Compile Include="Services\ServicePrice.cs" />
-    <Compile Include="Store\Stock.cs" />
-    <Compile Include="Store\StockItem.cs" />
-    <Compile Include="Taxation\Tax.cs" />
-    <Compile Include="Transactions\AccountingVocherEntry.cs" />
-    <Compile Include="Transactions\InventoryVoucherEntry.cs" />
     <Compile Include="Transactions\Voucher.cs" />
-    <Compile Include="Transactions\VoucherConfiguration.cs" />
-    <Compile Include="Transactions\VoucherNumbering.cs" />
     <Compile Include="Transactions\VoucherType.cs" />
-    <Compile Include="Vendors\Vendor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
