--- a/Russet.iMuneem.csproj
+++ b/Russet.iMuneem.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Communications\ZipCode.cs" />
     <Compile Include="Finance\Currency.cs" />
     <Compile Include="Finance\FinancialYear.cs" />
+    <Compile Include="General\People\Gender.cs" />
     <Compile Include="Inventories\Product.cs" />
     <Compile Include="Inventories\ProductBatch.cs" />
     <Compile Include="Inventories\ProductCategory.cs" />
@@ -66,6 +67,10 @@
     <Compile Include="Inventories\ProductUoM.cs" />
     <Compile Include="Inventories\ProductVersion.cs" />
     <Compile Include="Ledgers\Account.cs" />
+    <Compile Include="Medical\Laboratory\AgeGroup.cs" />
+    <Compile Include="Medical\Laboratory\Test.cs" />
+    <Compile Include="Medical\Laboratory\TestRange.cs" />
+    <Compile Include="Medical\Laboratory\TestUnit.cs" />
     <Compile Include="Organization\Company.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transactions\Voucher.cs" />
