Person base class for all type of persons or peoples registered in the system..

--- a/Russet.iMuneem.csproj
+++ b/Russet.iMuneem.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Finance\Currency.cs" />
     <Compile Include="Finance\FinancialYear.cs" />
     <Compile Include="General\People\Gender.cs" />
+    <Compile Include="General\People\MaritalStatus.cs" />
+    <Compile Include="General\People\Person.cs" />
     <Compile Include="Inventories\Product.cs" />
     <Compile Include="Inventories\ProductBatch.cs" />
     <Compile Include="Inventories\ProductCategory.cs" />
